k8s-manifests/auth-service-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: development
spec:
  template:
    spec:
      containers:
      - name: auth-service
        command: ["/bin/sh"]
        args: 
        - -c
        - |
          [...]
